--- a/0407.css
+++ b/0407.css
@@ -59,7 +59,9 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 90px;
+    height: 100px;
+    padding: 0;
+    border-width: 0;
     background-color: rgb(28, 30, 51);
     z-index: 200;
 }
