--- a/0407.css
+++ b/0407.css
@@ -355,15 +355,8 @@ body {
         }
     }
 
-    body {
-        overflow: hidden;
-        width: 100%;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        }
-
-        html, body {
-            max-width: 100%;
-            overflow-x: hidden;
-        }
+    
+html {
+    over-flow-x :  hidden;
+ }
+      
