--- a/0407.css
+++ b/0407.css
@@ -40,11 +40,11 @@
 #NOX_1 {
     position: absolute;
     font-family:"bitbit";
-    top: 150px;
+    top: 210px;
     left: 10px;
     font-size: 30px;
     z-index: 300;
-    white-space:pre;
+   
 }
 
 
@@ -87,7 +87,7 @@ body {
     top: 30px;
     left: 170px;
     right: 0;
-  
+
 }
 #navmenu p {
     margin: 0 10px;
@@ -205,9 +205,6 @@ body {
           
         }
       }
- 
-     
-    
      
       @keyframes typing{
         0% {
@@ -315,7 +312,7 @@ body {
      
      
 
-      @media screen and (max-width: 1024px) {
+    @media screen and (max-width: 1024px) {
         #header {
             height: 120px;
         }
@@ -342,21 +339,88 @@ body {
         }
 
         #team{
-          
+          top: 210px;
+          font-size: 20px;
+          left: 45px;
             
         }
 
         #Catchphrase{
-            height: 290px;
+            height: 200px;
         }
 
         #NOX_1 {
-            
+            top: 340px;
         }
-    }
 
-    
-html {
-    over-flow-x :  hidden;
- }
-      
+        #team-1 {
+            top: 270px;
+            font-size: 20px;
+            left: 42px;
+        }
+
+        #oneword {
+            font-size: 20px;
+        }
+
+        #description {
+            left: 50px;
+            transform: translate(-145%,140%);
+            font-size: 15px;
+        }
+
+        #title {
+            
+            transform: translate(-145%,380%);
+            font-size: 15px;
+        }
+
+        @keyframes fadein {
+            from {
+                opacity: 0;
+                transform: translate3d(-25%, 3%, 0);
+            }
+            to {
+                opacity: 1;
+                transform: translateX(-25%);
+            }
+        }
+
+        #flex-item-1 img{
+        left: 50%;
+        transform: translateX(-25%);
+        width: 500px;
+        }
+
+        #NOX img{
+        left: 50%;
+        transform: translateX(-70%);
+        width: 300px;
+        }
+
+        #oneword {
+        
+            animation-name: jaehee;
+            animation-duration:1s;
+            animation-duration: leaner;
+            animation-fill-mode: forwards;
+            }
+            @keyframes jaehee {
+                0% {
+                  left: 0px;
+                }
+                
+                100% {
+                  left:20px;
+                  
+                }
+              }
+              
+
+        #oneword {
+        left: 140px;
+        font-size: 15px;
+        width: 50px;
+        }
+
+    }
