--- a/0407.css
+++ b/0407.css
@@ -369,118 +369,7 @@ body {
             font-size: 15px;
         }
 
-        #title {
-            
-            transform: translate(-145%,380%);
-            font-size: 15px;
-        }
-
-        @keyframes fadein {
-            from {
-                opacity: 0;
-                transform: translate3d(-25%, 3%, 0);
-            }
-            to {
-                opacity: 1;
-                transform: translateX(-25%);
-            }
-        }
-
-        #flex-item-1 img{
-        left: 50%;
-        transform: translateX(-25%);
-        width: 500px;
-        }
-
-        #NOX img{
-        left: 50%;
-        transform: translateX(-70%);
-        width: 300px;
-        }
-
-        #oneword {
-        
-            animation-name: jaehee;
-            animation-duration:1s;
-            animation-duration: leaner;
-            animation-fill-mode: forwards;
-            }
-            @keyframes jaehee {
-                0% {
-                  left: 0px;
-                }
-                
-                100% {
-                  left:20px;
-                  
-                }
-              }
-              
-
-        #oneword {
-        left: 140px;
-        font-size: 15px;
-        width: 50px;
-        }
-
-    }
-
-    @media screen and (max-width: 400px) {
-        #header {
-            height: 120px;
-        }
-        #logo {
-            left: 50%;
-            transform: translateX(-50%);
-        }
-        #navmenu {
-            left: 50%;
-            top: 60%;
-            transform: translateX(-50%);
-            padding: 0;
-
-            justify-content: center;
-        }
-        #main-container {
-            width: 90%;
-        }
-        #title {
-            font-size: 24px;
-        }
-        .picture-item {
-           flex-basis: 40%;
-        }
-
-        #team{
-          top: 210px;
-          font-size: 20px;
-          left: 45px;
-            
-        }
-
-        #Catchphrase{
-            height: 200px;
-        }
-
-        #NOX_1 {
-            top: 340%;
-        }
-
-        #team-1 {
-            top: 270px;
-            font-size: 20px;
-            left: 42px;
-        }
-
-        #oneword {
-            font-size: 20px;
-        }
-
-        #description {
-            left: 50px;
-            transform: translate(-145%,140%);
-            font-size: 15px;
-        }
+        #Catchphrase img { width: 90px;}
 
         #title {
             
