--- a/0407.css
+++ b/0407.css
@@ -17,7 +17,11 @@
 }
 
 
-
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+    }
+    
 #NOX_1 {
     position: absolute;
     font-family:"bitbit";
